assets/css/style.css
body {
    background: grey;
    font-family: 'Nanum Gothic', sans-serif;
}

img {
    display: inline-block;
    width: 369px;
    height: auto;
    border: 1px solid black;
  }

  .jumbotron {
      width: 960px;
  }

.color {
    background-color: #4aaaa5 !important;
}

@media (max-width: 767px) {
    .jumbotron {
      width: 250px;
    }
  }

